--- a/404.html
+++ b/404.html
@@ -75,7 +75,7 @@
 </ul></div>
 </header>
 <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+      <div class="mid_wrapper">
         <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
