--- a/index.html
+++ b/index.html
@@ -75,11 +75,38 @@
 </ul></div>
 </header>
 <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        <div class="home"><p>👷Site en construction👷</p>
+      <div class="large_wrapper">
+        <div class="home"><h1>Collectif Héphaïstos</h1>
+<h2>Collectif anticapacitiste & antipsychiatrique de pair-aidance.</h2>
 
-<!--Posts de blog--></div>
+<div class="h_row">
 
+  <div class="h_main">
+  	<img src="/assets/medias/logo_collectif.png" alt="texte 'Collectif Héphaïstos' sur fond du disability pride flag" width="130" style="float:left;margin:0 10px 0 0">
+  	<p>👷Notre site est encore en construction👷</p>
+  	<p>En attendant, vous pouvez <a href="https://collectif-hephaistos.github.io/a-propos/">en savoir plus</a> sur nous.</p>
+  </div>
+
+  <div class="h_side">
+  	<h2>Nos actualités</h2>
+  	<h3>Nos prochains évènements</h3>
+  	<ul>
+  		<li><u>Groupe de discussion sur le SED</u>, entre concerné·es (diag, autodiag et questionnement), animé par un médecin sediste aidé d'autres sedistes. Exposé rapide sur le SED, remplissage collectif du questionnaire auto-diagnostic de l'ISM, discussions et FAQ.<br><i>Date à déterminer, semaine du 6 ou du 13 juin</i></li>
+  		<li><u>Réunion du collectif</u><br><i>Mercredi 8 juin, réunion mixte irl/ivl</i></li>
+  	</ul>
+    <h3>Nos articles à paraître</h3>
+    <ul>
+    	<li><u>Naviguer le médical pour l'endométriose</u> : parcours de diagnostic, du questionnement aux diagnostics officiels et aux traitements</li>
+    	<li><u>Guide d'orientation dans l'autodiag psy</u> : comment et pourquoi utiliser l'auto-diagnostic au mieux (questionnaires, troubles, symptômes et manifestations fréquentes expliquées avec des exemples par des concernés, etc.)</li>
+    	<li><u>Les diagnostics proches</u> : à quels troubles similaires s'intéresser quand vous avez été diagnostiqué X ou Y</li>
+    </ul>  
+  </div>
+
+</div>
+
+
+<!--Posts de blog--><!--Fin posts de blog-->
+        </div>
       </div>
     </main><footer class="site-footer h-card">
   <div class="wrapper">
@@ -103,3 +130,4 @@
 </footer></body>
 
 </html>
+
